--- a/style.css
+++ b/style.css
@@ -4,17 +4,30 @@
   box-sizing: border-box;
 }
 body {
-  font-family: Arial, sans-serif;
+  font-family: "Lato", sans-serif;
 }
-/* HERO section */
+
+/*******************************************/
+/* REUSEABLE STYLES*/
+/*******************************************/
+.btn {
+  height: 45px;
+  font-size: 16px;
+  border-radius: 50px;
+  border: none;
+}
+
+/*******************************************/
+/* HERO SECTION */
+/*******************************************/
+
 .hero-section {
-  /* background-color: red; */
-  background-image: url("./img/hero.jpg");
+  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+    url("./img/hero.jpg");
   background-size: cover;
   background-position: center;
   min-height: 100vh;
   background-repeat: no-repeat;
-  /* max-width: 95%; */
   padding: 25px 0 0 70px;
 }
 .logo {
@@ -37,36 +50,111 @@ nav {
 }
 .navigation a:link {
   text-decoration: none;
-  padding-right: 35px;
+  padding-bottom: 7px;
+}
+.navigation a:hover {
+  border-bottom: 2px solid #e67e22;
 }
 .navigation a {
   color: white;
   text-transform: uppercase;
   font-size: 18px;
+  font-weight: 300;
 }
-.para {
+.navigation li {
+  margin-right: 35px;
+}
+.hero-text {
   color: white;
   font-size: 47px;
   text-transform: uppercase;
   list-style: none;
   padding-top: 75px;
   padding-bottom: 20px;
+  font-weight: 300;
 }
-.hungry {
+.hungry-btn {
   color: white;
   background-color: #e67e22;
-  height: 45px;
   width: 150px;
-  border-radius: 50px;
-  border: none;
-  font-size: 16px;
   margin-right: 7px;
 }
-.show-me-more {
+.hungry-btn:hover {
+  background-color: #d1711e;
+  transition: background-color 0.2s ease-in;
+}
+.show-me-more-btn {
   color: #e67e22;
   background: none;
-  height: 45px;
   border-radius: 50px;
   border: 1.5px solid #e67e22;
   width: 190px;
+}
+.show-me-more-btn:hover {
+  color: white;
+  background-color: #d1711e;
+  transition: background-color 0.2s ease-in;
+}
+.feature-section {
+  background-color: white;
+  margin-top: 100px;
+  font-weight: 300;
+}
+.ft-header {
+  text-align: center;
+  margin-bottom: 25px;
+  text-transform: uppercase;
+  font-weight: 300;
+  font-size: 35px;
+}
+.line {
+  border-bottom: 2px solid #e67e22;
+  width: 100px;
+  margin-left: 590px;
+}
+.feature-text {
+  margin-top: 20px;
+  text-align: center;
+  font-weight: 300;
+  font-size: 20px;
+}
+
+.feature-container {
+  margin-top: 100px;
+  display: flex;
+  padding-left: 70px;
+  padding-right: 70px;
+  margin-bottom: 100px;
+}
+.container-1 {
+  width: 300px;
+  padding: 20px;
+  font-size: 18px;
+}
+.container-2 {
+  width: 300px;
+  padding: 20px;
+}
+.container-3 {
+  width: 300px;
+  padding: 20px;
+}
+.container-4 {
+  width: 300px;
+  padding: 20px;
+}
+
+i {
+  font-size: 50px;
+  color: #e67e22;
+  width: 100px;
+  margin-bottom: 20px;
+}
+.icon-head {
+  font-weight: 300;
+  text-transform: uppercase;
+  font-size: 22px;
+}
+.icon-para {
+  font-size: 18px;
 }
