--- a/style.css
+++ b/style.css
@@ -41,6 +41,8 @@ body {
 nav {
   display: flex;
   justify-content: flex-start;
+  /*  position: sticky;
+  top: 0; */
 }
 .navigation {
   display: flex;
@@ -95,6 +97,10 @@ nav {
   background-color: #d1711e;
   transition: background-color 0.2s ease-in;
 }
+
+/*******************************************/
+/* FEATURE SECTION */
+/*******************************************/
 .feature-section {
   background-color: white;
   margin-top: 100px;
@@ -110,7 +116,7 @@ nav {
 .line {
   border-bottom: 2px solid #e67e22;
   width: 100px;
-  margin-left: 590px;
+  margin-left: 530px;
 }
 .feature-text {
   margin-top: 20px;
@@ -158,3 +164,213 @@ i {
 .icon-para {
   font-size: 18px;
 }
+/*******************************************/
+/* MEAL SECTION */
+/*******************************************/
+.meal-img-container {
+  display: flex;
+  flex-direction: column;
+  gap: 0;
+}
+.first-meal {
+  display: flex;
+  list-style: none;
+}
+.last-meal {
+  display: flex;
+  list-style: none;
+}
+.meal-image {
+  width: 400px;
+  height: auto;
+  overflow: hidden;
+  background-color: #000;
+}
+
+.meal-image img {
+  width: 100%;
+  height: 100%;
+  transform: scale(1.05);
+  opacity: 0.7;
+}
+.meal-image img:hover {
+  transform: scale(1.1);
+  opacity: 1;
+  transition: opacity 0.4s ease-in, transform 0.4s ease-in;
+}
+/*******************************************/
+/* APPLICATION SECTION */
+/*******************************************/
+.app {
+  background-color: #f4f4f4;
+}
+.app-head {
+  text-align: center;
+  margin-bottom: 25px;
+  text-transform: uppercase;
+  font-weight: 300;
+  font-size: 35px;
+}
+.app-container {
+  padding-top: 100px;
+  padding-bottom: 100px;
+  background-color: #f4f4f4;
+}
+.app-line {
+  margin-left: 520px;
+  border-bottom: 2px solid #e67e22;
+  width: 100px;
+  font-weight: 300;
+  margin-bottom: 50px;
+}
+.app-container-2 {
+  display: flex;
+  justify-content: center;
+}
+.app-img-container {
+  width: 200px;
+  margin-left: 300px;
+  margin-right: 80px;
+}
+.app-img-container img {
+  width: 100%;
+  animation: iphone 0.8s ease-in;
+}
+@keyframes iphone {
+  0% {
+    transform: translateY(500px);
+    opacity: 0.5;
+  }
+  100% {
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
+.app-text-container {
+  display: flex;
+  margin-top: 50px;
+}
+.app-list {
+  list-style: none;
+  font-size: 25px;
+  color: #e67e22;
+}
+.app-text {
+  list-style: none;
+  font-size: 20px;
+  font-weight: 300;
+}
+.one {
+  margin-right: 20px;
+  margin-bottom: 40px;
+
+  border: 2px solid #e67e22;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  text-align: center;
+  padding-top: 10px;
+}
+.first-text {
+  width: 400px;
+  margin-bottom: 40px;
+}
+.two {
+  margin-right: 20px;
+  margin-bottom: 35px;
+  border: 2px solid #e67e22;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  text-align: center;
+  padding-top: 10px;
+}
+.second-text {
+  width: 450px;
+  margin-bottom: 40px;
+}
+.three {
+  margin-right: 20px;
+  border: 2px solid #e67e22;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  text-align: center;
+  padding-top: 10px;
+}
+.thrid-text {
+  width: 450px;
+}
+.app-store {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-left: 400px;
+  list-style: none;
+  margin-top: -50px;
+}
+.apple-store {
+  width: 190px;
+  margin-left: 10px;
+}
+.apple {
+  width: 100%;
+}
+/*******************************************/
+/* CITIES SECTION */
+/*******************************************/
+.city-container {
+  margin-top: 100px;
+  margin-bottom: 100px;
+}
+.city-head {
+  text-align: center;
+  margin-bottom: 25px;
+  text-transform: uppercase;
+  font-weight: 300;
+  font-size: 40px;
+}
+.city-content {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.content-1 {
+  margin-right: 20px;
+}
+.content-2 {
+  margin-right: 20px;
+}
+.content-3 {
+  margin-right: 20px;
+}
+
+.city-image {
+  width: 250px;
+  margin-bottom: 20px;
+}
+.img-city {
+  width: 100%;
+}
+.city-name {
+  text-transform: uppercase;
+  font-weight: 300;
+  margin-bottom: 15px;
+  font-size: 23px;
+}
+.contact {
+  list-style: none;
+  font-weight: 300;
+  font-size: 20px;
+}
+.contact i {
+  font-size: 20px;
+  margin: 0 15px 15px 0;
+  width: 20px;
+}
+.contact .mail {
+  color: #e67e22;
+}
+/*******************************************/
+/* CUSTOMER SECTION */
+/*******************************************/
