--- a/style.css
+++ b/style.css
@@ -47,23 +47,23 @@ nav {
 .navigation {
   display: flex;
   list-style: none;
-  padding-left: 490px;
+  padding-left: 400px;
   margin-top: 50px;
 }
-.navigation a:link {
+.navigation .food:link {
   text-decoration: none;
   padding-bottom: 7px;
 }
-.navigation a:hover {
+.navigation .food:hover {
   border-bottom: 2px solid #e67e22;
 }
-.navigation a {
+.navigation .food {
   color: white;
   text-transform: uppercase;
   font-size: 18px;
   font-weight: 300;
 }
-.navigation li {
+.navigation .nav-list {
   margin-right: 35px;
 }
 .hero-text {
@@ -368,9 +368,289 @@ i {
   margin: 0 15px 15px 0;
   width: 20px;
 }
+.fa-brands:hover {
+  color: blue;
+}
 .contact .mail {
   color: #e67e22;
 }
 /*******************************************/
 /* CUSTOMER SECTION */
 /*******************************************/
+.customer {
+  background: linear-gradient(rgba(0, 0, 0, 0.749), rgba(0, 0, 0, 0.749)),
+    url("./img/back-customers.jpg");
+  background-size: cover;
+  background-position: center;
+  min-height: 100vh;
+  background-repeat: no-repeat;
+  padding: 50px 0 50px 0;
+  color: white;
+  font-weight: 300;
+  font-size: 20px;
+  font-style: italic;
+}
+.customer-head {
+  text-align: center;
+  color: white;
+  margin-bottom: 25px;
+  text-transform: uppercase;
+  font-weight: 300;
+  font-size: 38px;
+}
+.customer-comment {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.customer-1 {
+  margin-right: 20px;
+}
+.customer-2 {
+  margin-right: 20px;
+}
+.customer-text {
+  width: 350px;
+  margin-bottom: 20px;
+}
+.customer-1-head {
+  font-size: 40px;
+}
+.profile {
+  display: flex;
+}
+.profile-img {
+  width: 40px;
+  height: 40px;
+  padding-right: 10px;
+}
+.man {
+  width: 100%;
+  border-radius: 50%;
+}
+/*******************************************/
+/* SIGN-UP SECTION */
+/*******************************************/
+.sign-up {
+  background-color: #f4f4f4;
+  padding: 100px 40px 100px 40px;
+}
+.sign-up-head {
+  text-align: center;
+  margin-bottom: 25px;
+  text-transform: uppercase;
+  font-weight: 300;
+  font-size: 38px;
+}
+.sign-up .app-line {
+  margin-left: 490px;
+}
+.sign-up-content {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.sign-up-content-head {
+  font-size: 30px;
+  font-weight: 300;
+  text-transform: uppercase;
+  margin-bottom: 20px;
+}
+.sign-up-content-1 {
+  background-color: white;
+  width: 300px;
+  padding: 15px;
+  margin-right: 40px;
+}
+.sign-up-content-2 {
+  background-color: white;
+  width: 300px;
+  padding: 15px;
+  margin-right: 40px;
+}
+.sign-up-content-3 {
+  background-color: white;
+  width: 300px;
+  padding: 15px;
+}
+
+.content-price {
+  margin-bottom: 15px;
+}
+.price {
+  font-size: 50px;
+  font-weight: 300;
+  color: #e67e22;
+}
+.price-month {
+  color: #e67e22;
+}
+.content-text {
+  margin-bottom: 10px;
+}
+.top {
+  margin-bottom: 20px;
+}
+.info {
+  list-style: none;
+}
+.info-iteam {
+  margin-bottom: 15px;
+}
+.tick {
+  color: #e67e22;
+  font-weight: 600;
+  margin-right: 20px;
+}
+.down {
+  margin-bottom: 10px;
+}
+.sign-now {
+  background-color: #e67e22;
+  height: 45px;
+  font-size: 16px;
+  border-radius: 50px;
+  border: none;
+  width: 150px;
+  margin-left: 50px;
+}
+.sign-in {
+  height: 45px;
+  font-size: 16px;
+  border-radius: 50px;
+  border: none;
+  width: 150px;
+  margin-left: 50px;
+  border: 1.5px solid #e67e22;
+  background-color: white;
+}
+.sign-in:hover {
+  color: white;
+  background-color: #d1711e;
+  transition: background-color 0.2s ease-in;
+}
+/*******************************************/
+/* CONTACT-US SECTION */
+/*******************************************/
+.contact-us {
+  margin: 100px auto;
+}
+.contact-us-head {
+  text-align: center;
+  margin-bottom: 25px;
+  text-transform: uppercase;
+  font-weight: 300;
+  font-size: 38px;
+}
+.list-container {
+  display: flex;
+  justify-content: center;
+}
+.form-list {
+  display: flex;
+  list-style: none;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  width: 600px;
+  gap: 20px;
+}
+.label-list {
+  display: flex;
+  justify-content: space-between;
+  align-self: flex-start;
+  width: 100%;
+}
+.label-list-3 {
+  gap: 0;
+}
+.checkbox {
+  margin-right: 10px;
+}
+.other-list {
+  gap: 50px;
+}
+.input-list {
+  width: 60%;
+}
+input[type="text"],
+input[type="email"],
+select,
+textarea {
+  width: 100%;
+  padding: 5px;
+}
+input[type="submit"] {
+  width: 120px;
+  background-color: #e67e22;
+  font-size: 16px;
+  border-radius: 50px;
+  border: none;
+  /* margin-left: 30px; */
+  height: 50px;
+  color: white;
+  text-align: center;
+}
+input[type="submit"]:hover {
+  background-color: #d35400;
+}
+/*******************************************/
+/* FOOTTER SECTION */
+/*******************************************/
+footer {
+  background-color: #333333;
+  color: #747474;
+  padding: 50px;
+}
+.footer-nav-list {
+  display: flex;
+  list-style: none;
+  margin-bottom: 40px;
+}
+
+.footer-list {
+  display: flex;
+  list-style: none;
+}
+.footer-nav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.footer-iteam {
+  margin-right: 20px;
+}
+.tools {
+  color: #747474;
+  text-decoration: none;
+}
+.tools:hover {
+  color: white;
+}
+.fa-facebook,
+.fa-twitter,
+.fa-google-plus-g,
+.fa-square-instagram {
+  color: #747474;
+  font-size: 20px;
+  margin-right: 25px;
+  width: 20px;
+}
+.fa-square-instagram {
+  margin: 0;
+}
+.fa-facebook:hover {
+  color: #3b5998;
+}
+.fa-brands:hover .fa-twitter:hover {
+  color: #00aced;
+}
+.fa-google-plus-g:hover {
+  color: #dd4b39;
+}
+.fa-square-instagram:hover {
+  color: #517fa4;
+}
+.footer-text {
+  text-align: center;
+}
